# migra

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  PROJECT_PLAN2.md  README.de.md  README.fr.md  README.he.md  README.hi.md  README.ja.md  README.md  README.zh.md  action.yml  pre-commit-config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
migra/: __init__.py  _compat_pkg_resources.py  ai_drift.py  ai_explain.py  changes.py  command.py  db_inspector.py
tests/: conftest.py  test_ai_drift.py  test_ai_generate.py  test_command_drift.py  test_db_inspector.py  test_drift_security.py  test_migra.py
tests/FIXTURES/enumdefaults/: expected.sql
tests/FIXTURES/enumdeps/: expected.sql
tests/FIXTURES/everything/: expected.sql  expected2.sql
