[tool.poetry]
name = "migradiff"
version = "1.6.0"
authors = [ "MigraDiff Team <migradiff@anomalyco.com>",]
license = "MIT"
readme = "README.md"
description = "Like `diff` but for PostgreSQL schemas — actively maintained fork"

repository = "https://github.com/migradiff/migra"
homepage = "https://github.com/migradiff/migra"
packages = [{ include = "migra" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
sqlbag = "*"
six = "*"
schemainspect = ">=3.1.1663587362"
setuptools = "*"
psycopg2-binary = { version="*", optional = true }
anthropic = { version = ">=0.20.0", optional = true }

[tool.poetry.dev-dependencies]
sqlbag = "*"
pytest = "*"
pytest-cov = "*"
pytest-clarity = "*"
psycopg2-binary = "*"
flake8 = "*"
isort = "*"
black = "*"
toml = "*"

[tool.poetry.scripts]
migra = 'migra:do_command'

[tool.poetry.extras]
pg = ["psycopg2-binary"]
ai = ["anthropic"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
